fixed textarea width on mobile

--- a/css/main.styl
+++ b/css/main.styl
@@ -322,7 +322,7 @@ footer
   background: #607d8b
   color: #fff
   width: 100%
-  height: 17em
+  height: 25em
   position: relative
   top: 4.8em
   display: flex
